--- a/go6percent/index.html
+++ b/go6percent/index.html
@@ -36,6 +36,35 @@
 						<div class="variant__title">midle plan</div>
 						<div class="variant__perc">
 							<span class="variant__1">Прибыль</span>
+							<span class="variant__2">1.5%</span>
+							<span class="variant__3"> / в день</span>
+						</div>
+						<div class="variant__list">
+							<div class="variant__left">
+								<p>Начисление процента:</p>
+								<p>Минимальный депозит:</p>
+								<p>Минимальный депозит:</p>
+								<p>Выплаты:</p>
+								<p>Срок действия депозита:</p>
+							</div>
+							<div class="variant__right">
+								<p>Каждые 7 дней</p>
+								<p>1$</p>
+								<p>1$</p>
+								<p>Раз в 30 дней</p>
+								<p>Безсрочно</p>
+							</div>
+						</div>
+						<button class="mainbutt variant__butt">Инвестировать!</button>
+					</div>
+					<div class="variants__item variant variant_2">
+						<div class="variant__top"></div>
+						<div class="variant__circle">
+							<i></i>
+						</div>
+						<div class="variant__title">Optimal plan</div>
+						<div class="variant__perc">
+							<span class="variant__1">Прибыль</span>
 							<span class="variant__2">3%</span>
 							<span class="variant__3"> / в день</span>
 						</div>
@@ -49,20 +78,20 @@
 							</div>
 							<div class="variant__right">
 								<p>Каждые 7 дней</p>
-								<p>1 000$</p>
-								<p>3 000$</p>
+								<p>500$</p>
+								<p>0.06B</p>
 								<p>Раз в 30 дней</p>
 								<p>Безсрочно</p>
 							</div>
 						</div>
 						<button class="mainbutt variant__butt">Инвестировать!</button>
 					</div>
-					<div class="variants__item variant variant_2">
+					<div class="variants__item variant variant_3">
 						<div class="variant__top"></div>
 						<div class="variant__circle">
 							<i></i>
 						</div>
-						<div class="variant__title">Optimal plan</div>
+						<div class="variant__title">luxury plan</div>
 						<div class="variant__perc">
 							<span class="variant__1">Прибыль</span>
 							<span class="variant__2">6%</span>
@@ -78,36 +107,7 @@
 							</div>
 							<div class="variant__right">
 								<p>Каждые 7 дней</p>
-								<p>1 000$</p>
-								<p>3 000$</p>
-								<p>Раз в 30 дней</p>
-								<p>Безсрочно</p>
-							</div>
-						</div>
-						<button class="mainbutt variant__butt">Инвестировать!</button>
-					</div>
-					<div class="variants__item variant variant_3">
-						<div class="variant__top"></div>
-						<div class="variant__circle">
-							<i></i>
-						</div>
-						<div class="variant__title">luxury plan</div>
-						<div class="variant__perc">
-							<span class="variant__1">Прибыль</span>
-							<span class="variant__2">9%</span>
-							<span class="variant__3"> / в день</span>
-						</div>
-						<div class="variant__list">
-							<div class="variant__left">
-								<p>Начисление процента:</p>
-								<p>Минимальный депозит:</p>
-								<p>Минимальный депозит:</p>
-								<p>Выплаты:</p>
-								<p>Срок действия депозита:</p>
-							</div>
-							<div class="variant__right">
-								<p>Каждые 7 дней</p>
-								<p>1 000$</p>
+								<p>0.6B</p>
 								<p>3 000$</p>
 								<p>Раз в 30 дней</p>
 								<p>Безсрочно</p>
@@ -219,19 +219,13 @@
 			<div class="bitcoin__graph">
 				<img src="img/graph.png" alt="">
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_1">
-				<p class="btc__price btc__price_1">1 BTC = <span class="usd">0</span>$</p>
+				<p class="btc__price">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_2">
-				<p class="btc__price btc__price_2">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_3">
-				<p class="btc__price btc__price_3">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_4">
-				<p class="btc__price btc__price_4">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_5">
-				<p class="btc__price btc__price_5">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_6">
-				<p class="btc__price btc__price_6">1 BTC = <span class="usd">0</span>$</p>
 				<img src="img/dot.png" alt="" class="bitcoin__dot bitcoin__dot_7">
-				<p class="btc__price btc__price_7">1 BTC = <span class="usd">0</span>$</p>
 				<p class="bitcoin__day bitcoin__day_1">ПН.<span class="data1"></span></p>
 				<p class="bitcoin__day bitcoin__day_2">ВТ.<span class="data2"></span></p>
 				<p class="bitcoin__day bitcoin__day_3">СР.<span class="data3"></span></p>
@@ -378,18 +372,23 @@
 			<div class="wrapper">
 				<div class="headerbott__info">
 					<div class="slide">
-						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
-						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
+						<h2>Разгони свои 6 процентов <br> стабильной прибыли!</h2>
+						<p>G6P - Новая система для возможности инвестирования и получения до 6% ежедневно,<br> с поддержкой самой популярной крипто валютой - Bitcoin.</p>
 						<button class="mainbutt">Стать инвестором!</button>
 					</div>
 					<div class="slide">
-						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
-						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
+						<h2>Прозрачная работа <br> системы.</h2>
+						<p>Мы не прикрываемся сомнительными легендами о криптоброкерах или добыче красной икры, наша стратегия - это мощное и активное маркетинговое продвижение проекта, затраты только на рекламу, результат который будет доступен каждому пользователю в онлайн режиме.</p>
 						<button class="mainbutt">Стать инвестором!</button>
 					</div>
 					<div class="slide">
-						<h2>ВЫСОКАЯ И СТАБИЛЬНАЯ<br> ПРИБЫЛЬ</h2>
-						<p>Go 6 Percen — лидер майнинга и трейдинга криптовалют на международных биржах! <br> За 5 лет работы мы достигли колоссальных результатов и теперь перед нами стоят<br> новые задачи. Мы приносим высокую и стабильную прибыль каждому нашему<br> партнеру. Присоединяйтесь к нам и повышайте свой доход!</p>
+						<h2>Легкая покупка и <br> хранение Bitcoin.</h2>
+						<p>Покупайте самую популярную крито-валюту Биткоин прямо в личном кабинете.<br> Храните, отправляйте и получайте Биткоин, используя внутренний защищенный <br>кошелек в личном кабинете.</p>
+						<button class="mainbutt">Стать инвестором!</button>
+					</div>
+					<div class="slide">
+						<h2>Высокодоходная Партнерская программа.</h2>
+						<p>Зарабатывайте на привлечение пользователей в систему и рекламе, щедрая 6-ти уровневая реферальная и бонусная программа позволит зарабатывать не выходя из дома!</p>
 						<button class="mainbutt">Стать инвестором!</button>
 					</div>
 				</div>
