--- a/go6percent/lk.html
+++ b/go6percent/lk.html
@@ -47,7 +47,104 @@
 			</div>	
 		</div>
 		<div class="contentlk__right">
-
+			<div class="contentlk__top">
+				<div class="contentlk__item">
+					<h2>Баланс</h2>
+					<p>2 822.30 USD</p>
+				</div>
+				<div class="contentlk__item">
+					<h2>Партнеров</h2>
+					<p>29</p>
+				</div>
+				<div class="contentlk__item">
+					<h2>Доход от партнеров</h2>
+					<p>9 620.96 USD</p>
+				</div>
+				<div class="contentlk__item">
+					<h2>Баланс прибыли</h2>
+					<p>29 588.36 USD</p>
+				</div>
+				<div class="contentlk__item">
+					<h2>Сумма пополнений</h2>
+					<p>980.00 USD</p>
+				</div>
+				<div class="contentlk__item">
+					<h2>Сумма вывода</h2>
+					<p>26 500.00 USD</p>
+				</div>
+			</div>
+			<div class="contentlk__title">
+				<h2>Подробная статистика</h2>
+				<p>На Вашем счете 2 822.30 USD</p>
+			</div>
+			<div class="contentlk__table tablelk">
+				<div class="tablelk__item tablelk__item_title">
+					<h2>Плат. система</h2>
+					<p class="tablelk__p">SystemPay USD</p>
+					<p class="tablelk__p">Adv Cash USD</p>
+					<p class="tablelk__p">Perfect Money USD</p>
+					<p class="tablelk__p">YandexMoney RUB copy 2</p>
+					<p class="tablelk__p">Qiwi RUB</p>
+					<p class="tablelk__p">Bitcoin BTC</p>
+					<p class="tablelk__p">Profit USD</p>
+					<p class="tablelk__p">Webmoney USD</p>
+				</div>
+				<div class="tablelk__item">
+					<h2>Рефские</h2>
+					<p class="tablelk__p">9 620.96</p>
+					<p class="tablelk__p">4 676.98</p>
+					<p class="tablelk__p">2 988.00</p>
+					<p class="tablelk__p">32 900.78</p>
+					<p class="tablelk__p">53 899.22</p>
+					<p class="tablelk__p">0.000767 copy</p>
+					<p class="tablelk__p">32 890.67</p>
+					<p class="tablelk__p">2 900.50</p>
+				</div>
+				<div class="tablelk__item">
+					<h2>Введено</h2>
+					<p class="tablelk__p">42 786.30</p>
+					<p class="tablelk__p">323.78</p>
+					<p class="tablelk__p">3 900.32</p>
+					<p class="tablelk__p">22 900.00</p>
+					<p class="tablelk__p">20 000.00</p>
+					<p class="tablelk__p">0.000020 copy</p>
+					<p class="tablelk__p">3 760.99</p>
+					<p class="tablelk__p">1 000.00</p>
+				</div>
+				<div class="tablelk__item">
+					<h2>На депозитах</h2>
+					<p class="tablelk__p">3 660.00</p>
+					<p class="tablelk__p">32 900.32</p>
+					<p class="tablelk__p">5 389.66</p>
+					<p class="tablelk__p">126 787.00</p>
+					<p class="tablelk__p">43 900.00</p>
+					<p class="tablelk__p">0.006567 copy</p>
+					<p class="tablelk__p">3 900.77</p>
+					<p class="tablelk__p">32 900.00</p>
+				</div>
+				<div class="tablelk__item">
+					<h2>Начислено</h2>
+					<p class="tablelk__p">3 660.00</p>
+					<p class="tablelk__p">32 900.32</p>
+					<p class="tablelk__p">5 389.66</p>
+					<p class="tablelk__p">126 787.00</p>
+					<p class="tablelk__p">43 900.00</p>
+					<p class="tablelk__p">0.006567 copy</p>
+					<p class="tablelk__p">3 900.77</p>
+					<p class="tablelk__p">32 900.00</p>
+				</div>
+				<div class="tablelk__item">
+					<h2>Выведено</h2>
+					<p class="tablelk__p">3 660.00</p>
+					<p class="tablelk__p">32 900.32</p>
+					<p class="tablelk__p">5 389.66</p>
+					<p class="tablelk__p">126 787.00</p>
+					<p class="tablelk__p">43 900.00</p>
+					<p class="tablelk__p">0.006567 copy</p>
+					<p class="tablelk__p">3 900.77</p>
+					<p class="tablelk__p">32 900.00</p>
+				</div>
+			</div>
 		</div>
 	</main>	
 			
