--- a/smoky/index.html
+++ b/smoky/index.html
@@ -1422,20 +1422,20 @@
 				</p>
 				<div class="modaltown__box">
 					<div class="modaltown__item">
-						<span>Москва</span>
-						<span>Казань</span>
+						<a>Москва</a>
+						<a>Казань</a>
 					</div>
 					<div class="modaltown__item">
-						<span>Санкт-Петербург</span>
-						<span>Ростов-на-Дону</span>
+						<a>Санкт-Петербург</a>
+						<a>Ростов-на-Дону</a>
 					</div>
 					<div class="modaltown__item">
-						<span>Екатеринбург</span>
-						<span>Новосибирск</span>
+						<a>Екатеринбург</a>
+						<a>Новосибирск</a>
 					</div>
 					<div class="modaltown__item">
-						<span>Самара</span>
-						<span>Челябинск</span>
+						<a>Самара</a>
+						<a>Челябинск</a>
 					</div>
 				</div>
 				<p class="modalform__p modaltown__p">
