--- a/smoky/index.html
+++ b/smoky/index.html
@@ -57,17 +57,17 @@
 										</h2>
 										<div class="sidefilters__colorbox colorbox">
 											<div class="colorbox__cont">
-												<div class="colorbox_w"></div>
-												<div class="colorbox_bl"></div>
-												<div class="colorbox_g"></div>
-												<div class="colorbox_y"></div>
-												<div class="colorbox_br"></div>
-												<div class="colorbox_r"></div>
-												<div class="colorbox_blu"></div>
-												<div class="colorbox_gr"></div>
-												<div class="colorbox_y2"></div>
-												<div class="colorbox_br2"></div>
-												<div class="colorbox_blu2"></div>
+												<div class="colorbox_w colorbox__item"></div>
+												<div class="colorbox_bl colorbox__item"></div>
+												<div class="colorbox_g colorbox__item"></div>
+												<div class="colorbox_y colorbox__item"></div>
+												<div class="colorbox_br colorbox__item"></div>
+												<div class="colorbox_r colorbox__item"></div>
+												<div class="colorbox_blu colorbox__item"></div>
+												<div class="colorbox_gr colorbox__item"></div>
+												<div class="colorbox_y2 colorbox__item"></div>
+												<div class="colorbox_br2 colorbox__item"></div>
+												<div class="colorbox_blu2 colorbox__item"></div>
 											</div>
 										</div>
 									</div>
