--- a/smoky/account_oo.html
+++ b/smoky/account_oo.html
@@ -2031,45 +2031,30 @@
 					<div class="cart__cont">
 						<div class="perinfo">
 							<h2 class="main__title">Личные данные</h2>
-							<div class="perinfo__butts">
-								<button class="showmore">ВОЙТИ В АККАУНТ</button>
-								<button class="showmore">БЫСТРЫЙ ЗАКАЗ</button>
+							<div class="perinfo__perinfo">
+								<p>Имя получателя: </p>
+								<span>Дмитрий</span>
 							</div>
-							<p class="perinfo__p">Войдите и получайте с каждого заказа баллы</p>
-							<form action="">
-								<div class="perinfo__input">
-									<label for="">Имя получателя<span>*</span></label>
-									<input type="text" placeholder="Введите имя">
-								</div>
-								<div class="perinfo__input">
-									<label for="">Фамилия получателя<span>*</span></label>
-									<input type="text" placeholder="Введите фамилию">
-								</div>
-								<div class="perinfo__input">
-									<label for="">Контактный телефон<span>*</span></label>
-									<input class="perinfo_phone1" type="text" value="+7">
-									<div class="perinfo__p2cont">
-										<input class="perinfo_phone2" id="placeholder" type="text">
-										<label class="perinfo_label2" for="placeholder">**********</label>
-									</div>
-								</div>
-								<div class="perinfo__input">
-									<label for="">Полный адрес<span>*</span></label>
-									<input type="text" placeholder="75112, г. Москва, ул. Ленина 25/17">
-								</div>
-								<div class="perinfo__input">
-									<label for="">E-mail<span>*</span></label>
-									<input type="email" placeholder="Введите e-mail">
-								</div>
-								<div class="perinfo__input">
-									<label for="">Комментарий</label>
-									<textarea placeholder="Ваш комментарий к заказу"></textarea>
-								</div>
-								<div class="perinfo__check">
-									<input type="checkbox" id="pcheck1" class="perinfo__checkbox">
-									<label for="pcheck1" class="perinfo__checkboxlabel">Оформляя заказ, я подтверждаю свое согласие с <a href="">условиями использование сайта и условиями возврата товара</a></label>
-								</div>
-							</form>
+							<div class="perinfo__perinfo">
+								<p>Фамилия: </p>
+								<span>Дмитриев</span>
+							</div>
+							<div class="perinfo__perinfo">
+								<p>Контактный телефон: </p>
+								<span>+7 (495) 771-11-83</span>
+							</div>
+							<div class="perinfo__perinfo">
+								<p>Полный адрес: </p>
+								<span>г.Москва, ул.Ленина 158/70</span>
+							</div>
+							<div class="perinfo__perinfo">
+								<p>E-mail: </p>
+								<span>dmitriy_d@gmail.com</span>
+							</div>
+							<div class="perinfo__perinfo">
+								<p>Комментарий:</p>
+								<span> Упакуйте, пожалуйста хорошо, <br>чтобы ничего не разбилось</span>
+							</div>
 						</div>
 						<div class="delivery">
 							<h2 class="main__title delivery__title">Доставка</h2>
@@ -2081,44 +2066,7 @@
 									<input id="del1" type="radio" name="del">
 									<label for="del1">Самовывоз</label>
 								</div>
-								<div class="delivery__checkcont delivery__checkcont_2">
-									<div class="delivery__img">
-										<img src="img/d2.png" alt="">
-									</div>
-									<input id="del2" type="radio" name="del">
-									<label for="del2">Курьером по Москве <br> и МО</label>
-								</div>
-								<div class="delivery__checkcont delivery__checkcont_3">
-									<div class="delivery__img">
-										<img src="img/d3.png" alt="">
-									</div>
-									<input id="del3" type="radio" name="del">
-									<label for="del3">Байкал-Сервис<br> (в регионы)</label>
-								</div>
-								<div class="delivery__checkcont delivery__checkcont_4">
-									<div class="delivery__img">
-										<img src="img/d4.png" alt="">
-									</div>
-									<input id="del4" type="radio" name="del">
-									<label for="del4">Деловые линии<br> (в регионы)</label>
-								</div>
-								<div class="delivery__checkcont">
-									<div class="delivery__img">
-										<img src="img/d5.png" alt="">
-									</div>
-									<input id="del5" type="radio" name="del">
-									<label for="del5">Автотрейдинг</label>
-								</div>
-								<div class="delivery__checkcont">
-									<div class="delivery__img">
-										<img src="img/d6.png" alt="">
-									</div>
-									<input id="del6" type="radio" name="del">
-									<label for="del6">Почта России </label>
-								</div>
 							</form>
-						</div>
-						<div class="cartpayment">
 							<h2 class="main__title cartpayment__title">Оплата</h2>
 							<form action="">
 								<div class="payment__checkcont">
@@ -2128,15 +2076,10 @@
 									<input id="pay1" type="radio" name="pay">
 									<label for="pay1">Безналичный рассчёт</label>
 								</div>
-								<div class="payment__checkcont">
-									<div class="payment__img">
-										<img src="img/d8.png" alt="">
-									</div>
-									<input id="pay2" type="radio" name="pay">
-									<label for="pay2">Наличными</label>
-								</div>
 							</form>
-							<div class="cartpayment__total">
+						</div>
+						<div class="cartpayment accountoo">
+							<div class="cartpayment__total accountoo__total">
 								<div class="cartpayment__block">
 									<h2 class="cartpayment__subtitle">ИТОГО</h2>
 									<p class="cartpayment__p"><b>Количество товаров</b><span>5</span></p>
