--- a/smoky/index.html
+++ b/smoky/index.html
@@ -2003,6 +2003,14 @@
 						<div class="popular__item" style="margin: 0px 10px 10px 10px">
 							<div class="popular__top">
 								<span class="popular__stiker">NEW</span>
+								<div class="reviews__rating reviews__rating_medium">
+									<span>5.0</span>
+									<i class="fa fa-star" aria-hidden="true"></i>
+									<i class="fa fa-star" aria-hidden="true"></i>
+									<i class="fa fa-star" aria-hidden="true"></i>
+									<i class="fa fa-star" aria-hidden="true"></i>
+									<i class="fa fa-star" aria-hidden="true"></i>
+								</div>
 							</div>
 							<div class="popular__img">
 								<img src="img/pop2.jpg" alt="">
@@ -2778,6 +2786,20 @@
 						<span>2</span>
 					</div>
 					<p>ИЗБРАННОЕ</p>
+					<div class="favorites">
+						<ul>
+							<li><a href="">Кальяны (3)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Курительные смеси (7)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Щипцы (2)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Табаки (14)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Чай (1)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+						</ul>
+					</div>
+					<div class="favorites2">
+						<h2 class="favorites2__title">Список желаний пуст</h2>
+						<p class="favorites2__p">Добавляйте товары в список желаний, делитесь списками с друзьями и обсуждайте товары вместе</p>
+						<p class="favorites2__p">Если у вас уже есть списки желаний, <a href="">авторизуйтесь</a></p>
+					</div>
 				</div>
 				<div class="htabs__item htabs__item_2">
 					<div class="htabs__img htabs__img_2">
@@ -2787,6 +2809,19 @@
 						<span>0</span>
 					</div>
 					<p>СРАВНИТЬ</p>
+					<div class="balancepop">
+						<ul>
+							<li><a href="">Кальяны (3)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Курительные смеси (7)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Щипцы (2)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Табаки (14)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+							<li><a href="">Чай (1)</a><i class="fa fa-times" aria-hidden="true"></i></li>
+						</ul>
+					</div>
+					<div class="balancepop2">
+						<h2 class="balancepop2__title">Нет товаров в сравнении</h2>
+						<p class="balancepop2__p">Добавляйте товары в список желаний, делитесь списками с друзьями и обсуждайте товары вместе</p>
+					</div>
 				</div>
 				<div class="htabs__item htabs__item_3">
 					<div class="htabs__img htabs__img_3">
@@ -3090,7 +3125,7 @@
 	
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
-	<script type="text/javascript" src="js/custom.js" ></script>
+	<script async type="text/javascript" src="js/custom.js" ></script>
 	<script type="text/javascript" src="js/components/slick.js" ></script>
 	<script type="text/javascript" src="js/components/jqcloud-1.0.4.js" ></script>
 	<script src="https://use.fontawesome.com/6b27e5d2aa.js"></script>
