--- a/smoky/index.html
+++ b/smoky/index.html
@@ -1855,12 +1855,256 @@
 						</li>
 						<li>
 							<a href="">скидки и акции</a>
+							<div class="dropdown">
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
+										</div>
+										<div class="popular__amount">
+											<span>
+												<i class="fa fa-minus" aria-hidden="true"></i>
+											</span>
+											<input type="text">
+											<span>
+												<i class="fa fa-plus" aria-hidden="true"></i>
+											</span>
+										</div>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
+										</div>
+										<div class="popular__amount">
+											<span>
+												<i class="fa fa-minus" aria-hidden="true"></i>
+											</span>
+											<input type="text">
+											<span>
+												<i class="fa fa-plus" aria-hidden="true"></i>
+											</span>
+										</div>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
+										</div>
+										<div class="popular__amount">
+											<span>
+												<i class="fa fa-minus" aria-hidden="true"></i>
+											</span>
+											<input type="text">
+											<span>
+												<i class="fa fa-plus" aria-hidden="true"></i>
+											</span>
+										</div>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+								<div class="dropdown__boxitem">
+									<div class="popular__item">
+										<div class="popular__top">
+											<span class="popular__stiker">-25%</span>
+											<div class="popular__timer">
+												<span>20:30:46</span>
+											</div>
+										</div>
+										<div class="popular__img">
+											<img src="img/pop1.jpg" alt="">
+										</div>
+										<div class="popular__amount">
+											<span>
+												<i class="fa fa-minus" aria-hidden="true"></i>
+											</span>
+											<input type="text">
+											<span>
+												<i class="fa fa-plus" aria-hidden="true"></i>
+											</span>
+										</div>
+										<div class="popular__name">
+											<p>Кальян Алладин</p>
+										</div>
+										<div class="popular__price pprice">
+											<span class="pprice__old">4 800<i class="fa fa-rub" aria-hidden="true"></i></span>
+											<span class="pprice__new">3 599<i class="fa fa-rub" aria-hidden="true"></i></span>
+										</div>
+										<a href=""><img src="" alt=""></a>
+									</div>
+								</div>
+							</div>
 						</li>
 						<li>
 							<a href="">гарантии</a>
 						</li>
 						<li>
 							<a href="">каталог</a>
+							<div class="dropdown dropdowncatalog">
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_1" style=""></i><a href="">кальяны</a></li>
+									<li><a href="">Российские</a></li>
+									<li><a href="">Немецкие</a></li>
+									<li><a href="">Со скидкой</a></li>
+									<li><a href="">В кейсе</a></li>
+									<li><a href="">Из нержавейки</a></li>
+									<li><a href="">Египетские</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_2"></i><a href="">Табаки</a></li>
+									<li><a href="">Adalya</a></li>
+									<li><a href="">Afzal</a></li>
+									<li><a href="">Al Fakher</a></li>
+									<li><a href="">Al Ganga</a></li>
+									<li><a href="">Argelini</a></li>
+									<li><a href="">Al Ganga</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_3"></i><a href="">уголь</a></li>
+									<li><a href="">Древесный</a></li>
+									<li><a href="">Кокосовый</a></li>
+									<li><a href="">Лимонный</a></li>
+									<li><a href="">Натуральный</a></li>
+									<li><a href="">Электрический</a></li>
+									<li><a href="">Оливковый</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_4"></i><a href="">аксессуары</a></li>
+									<li><a href="">Kaloud, Фольга</a></li>
+									<li><a href="">Колпаки, ветрозащита</a></li>
+									<li><a href="">Корзины для угля</a></li>
+									<li><a href="">Плитка для розжига</a></li>
+									<li><a href="">Тарелки для кальяна</a></li>
+									<li><a href="">Щипцы</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_5"></i><a href="">смеси</a></li>
+									<li><a href="">AL SUR</a></li>
+									<li><a href="">Carrotine</a></li>
+									<li><a href="">DeCloud</a></li>
+									<li><a href="">Halif</a></li>
+									<li><a href="">Leyla</a></li>
+									<li><a href="">Без никотина</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_6"></i><a href="">Комплектующие</a></li>
+									<li><a href="">Блюдца</a></li>
+									<li><a href="">Запасные части</a></li>
+									<li><a href="">Колбы</a></li>
+									<li><a href="">Шахты</a></li>
+									<li><a href="">Шланги</a></li>
+									<li><a href="">Чаши</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_7"></i><a href="">Электронные<br> кальяны</a></li>
+									<li><a href="">Одноразовые</a></li>
+									<li><a href="">Starbuzz E-Hose Mini</a></li>
+									<li><a href="">Starbuzz E-Hose</a></li>
+									<li><a href="">Square E-Head</a></li>
+									<li><a href="">Square E-Hose 2.0</a></li>
+									<li><a href="">Большие кальяны</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_8"></i><a href="">Vape</a></li>
+									<li><a href="">Coil Master</a></li>
+									<li><a href="">Готовые наборы</a></li>
+									<li><a href="">Боксмоды</a></li>
+									<li><a href="">Мехмоды</a></li>
+									<li><a href="">Атомайзеры</a></li>
+									<li><a href="">Испарители</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_9"></i><a href="">Жидкости<br> для VAPE</a></li>
+									<li><a href="">Никотиновые</a></li>
+									<li><a href="">60/40</a></li>
+									<li><a href="">Aviator</a></li>
+									<li><a href="">Cake Vapors</a></li>
+									<li><a href="">Candy King</a></li>
+									<li><a href="">Choko Cow</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_10"></i><a href="">Настольные<br> игры</a></li>
+									<li><a href="">Карты игральные</a></li>
+									<li><a href="">Наборы для покера</a></li>
+									<li><a href="">Нарды</a></li>
+									<li><a href="">Шахматы</a></li>
+									<li><a href="">Большие стратегии</a></li>
+									<li><a href="">Головоломки</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_11"></i><a href="">Чай</a></li>
+									<li><a href="">Черный</a></li>
+									<li><a href="">Зеленый</a></li>
+									<li><a href="">С фруктами</a></li>
+									<li><a href="">Улун</a></li>
+									<li><a href="">Прессованый</a></li>
+									<li><a href="">Белый</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+								<ul>
+									<li class="dropdown__title"><i class="sidenav__svg_12"></i><a href="">Сладости</a></li>
+									<li><a href="">Рахат-лукум</a></li>
+									<li><a href="">Конфеты</a></li>
+									<li><a href="">Орехи в шоколаде</a></li>
+									<li><a href="">Фрукты в шоколаде</a></li>
+									<li><a href="">Marshmallow</a></li>
+									<li><a href="">Подарочные наборы</a></li>
+									<li><a class="showall" href="">ПОСМОТРЕТЬ ВСЕ</a></li>
+								</ul>
+							</div>
 						</li>
 					</ul>
 				</nav>
